Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,8 +186,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(list_of_terms)\n",
     "def output_at(list_of_terms, x_value):\n",
-    "    return "
+    "    pass"
    ]
   },
   {
